feat(plugin): invalidation cases, verify.jvmArgs and the Ktor sample
TestKit cases for the experiment's R3, R8 and R9, and the finding behind E4: a directory
dependency is flattened into lib/ with a dangling classpath entry, so a real directory on the
classpath cannot happen through the application plugin. verify { jvmArgs } lets aotVerify run
with what production adds on top of the script, which is where an agent or a module option on
one side only is caught; an agent on both sides is fine, as the tests show. samples/ktor asks
for the plugin by id and goes through train, verify and distTar; CI gets jobs for both.